2008-12-15 18:37-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibLoading.h: Added methods to header
	which were added during refactoring.
	* Source/GSNibLoading.m: Corrections to NSCustomView, refactoring.
	Changes to initialization logic to call awakeFromNib.
	* Source/NSBundleAdditions.m: Cleanup to move code to the nib loading
	code.
	* Source/NSClipView.m: Added assertion to guarantee that no
	NSCustomView is unarchived at time of initWithCoder: being called.

2008-12-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuItemCell.m (-_keyEquivalentString): Ignore function
	keys as key equivalents.

2008-12-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m: White space changes and general clean up.
	* Source/NSImage.m (-removeRepresentation:): Remove also cached
	representations for the current one.
	* Source/NSImage.m (-_cacheForRep:): Don't invalidate a valid
	cached representation.
	* Source/NSImage.m: Move some code from _doImageCache: to
	lockFocusOnRepresentation:

2008-12-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocument.m (-addWindowController:,-removeWindowController:):
	* Source/NSWindowController.m (-setDocumentEdited):
	* Source/NSWindow.m (-_startBackendWindow):
	Ensure that new windows properly show their document edited status.

2008-12-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocumentFrameworkPrivate.h:
	* Source/NSApplication.m(-finishLaunching):
	* Source/NSDocumentController.m (-setAutosavingDelay:,
	-reopenDocumentForURL:withContentsOfURL:error:,	-_autosaveDirectory,
	-autosaveDocuments:, -reopenAutosavedDocuments,
	-recordAutosavedDocument:):
	* Source/NSDocument.m (-initForURL:withContentsOfURL:ofType:error,
	-writeWithBackupToFile:ofType:saveOperation:,
	-writeSafelyToURL:ofType:forSaveOperation:error:,
	-revertDocumentToSaved:, close, -setAutosavedContentsFileURL:,
	-autosaveDocumentsWithDelegate:didAutosaveSelector:contextInfo:,
	-_removeAutosavedContentsFile):